--- a/package.json
+++ b/package.json
@@ -34,4 +34,13 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
+  {
+  "homepage": "https://joujout.github.io/navumiweb",
+  "scripts": {
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  }
+}
+
 }
